--- a/src/main/resources/templates/journal/journals.html
+++ b/src/main/resources/templates/journal/journals.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>期刊列表</title>
-  <link rel="stylesheet" th:href="@{/css/app.css}" />
+  <link rel="stylesheet" th:href="@{/css/style.css}" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
@@ -174,5 +174,6 @@
 
     updateCompareBtn();
   </script>
+  <script th:src="@{/js/components.js}"></script>
 </body>
 </html>
