--- a/src/main/resources/templates/journal/survey.html
+++ b/src/main/resources/templates/journal/survey.html
@@ -4,8 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>问卷 - 论文画像</title>
-  <link rel="stylesheet" th:href="@{/css/app.css}" />
+  <link rel="stylesheet" th:href="@{/css/style.css}" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <script th:src="@{/js/components.js}"></script>
 </head>
 <body>
   <!-- 导航栏容器 -->
